[project]
name = "flask-app"
version = "0.1.0"
description = "A Flask web application"
authors = [
    {name = "Developer"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "flask[async] (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "launchdarkly-server-sdk (>=9.12.0,<10.0.0)",
    "launchdarkly-observability @ ../../sdk/@launchdarkly/observability-python",
    "opentelemetry-exporter-otlp-proto-http (>=1.34.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[project.scripts]
flask-app = "main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
